fix: overflow bug

--- a/app/views/pages/players/players.styl
+++ b/app/views/pages/players/players.styl
@@ -35,8 +35,6 @@
   padding 8px 32px
   display flex
   align-items center
-  overflow-y visible
-  overflow-x scroll
 
 .players__header
   flex 1
